istio/deployments/istio/traffic-mirror/virtual-service.yml
#Istio virtual service
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servicea
spec:
  hosts:
    - "*"
    - servicea.demo.svc.cluster.local
  gateways:
    - servicea
  http:
    - match:
        - uri:
            prefix: /servicea/
      rewrite:
        uri: /
      route:
        - destination:
            host: servicea.demo.svc.cluster.local
            subset: v2
      mirror:
        host: servicea.demo.svc.cluster.local
        subset: v1
      corsPolicy:
        allowOrigin:
          - "*"
      timeout: 10s
